indexes; top / bottom bar; emerald default bgcolor; curstr overflow fix

--- a/assets/curstr.css
+++ b/assets/curstr.css
@@ -1,12 +1,13 @@
 div.curstr {
     width: 50%;
-    margin: auto;
-    padding: 1em 0.5em;
+    margin: 0.25em auto 0.25em auto;
+    padding: 1em 1em;
     background-color: #336;
     color: #FFF;
-    text-align: center;
     text-shadow: 0.1em 0.1em #000F;
+    text-align: center;
     white-space: pre;
+    overflow: auto;
 }
 span.curstr\+ {
     color: #F66;
